--- a/server001/compose.yml
+++ b/server001/compose.yml
@@ -5,10 +5,10 @@ services:
     image: python:3.11-slim
     working_dir: /app
     volumes:
-      - ./sync.py:/app/sync.py
-      - ./requirements.txt:/app/requirements.txt
-      - ./.env:/app/.env
-      - ./server001/data:/app/server001/data
+      - ../sync.py:/app/sync.py
+      - ../requirements.txt:/app/requirements.txt
+      - ../.env:/app/.env
+      - ./data:/app/server001/data
     environment:
       - PYTHONUNBUFFERED=1
     command: >
@@ -86,10 +86,10 @@ services:
     image: python:3.11-slim
     working_dir: /app
     volumes:
-      - ./sync.py:/app/sync.py
-      - ./requirements.txt:/app/requirements.txt
-      - ./.env:/app/.env
-      - ./server001/data:/app/server001/data
+      - ../sync.py:/app/sync.py
+      - ../requirements.txt:/app/requirements.txt
+      - ../.env:/app/.env
+      - ./data:/app/server001/data
     environment:
       - PYTHONUNBUFFERED=1
     command: >
