--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ R2_BUCKET_NAME=your_bucket_name_here
 R2_ENDPOINT=https://your_account_id_here.r2.cloudflarestorage.com
 
 # ローカルデータディレクトリ (プロジェクトルートからの相対パス)
-LOCAL_DATA_DIR=./server001/data
+LOCAL_DATA_DIR=./data
 
 # ワールド名 (デフォルト: world)
 WORLD_NAME=world
