--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,9 @@ LOCAL_DATA_DIR=./data
 
 # ワールド名 (デフォルト: world)
 WORLD_NAME=world
+
+# ホスト表示名 (bossbarに表示される名前 **ここは各自で変えてね!**)
+HOST_DISPLAY_NAME=YourName
+
+# RCON パスワード (Minecraftサーバーへのリモートコマンド実行用)
+RCON_PASSWORD=minecraft
