データパック用に除外範囲を修正

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ env/
 ENV/
 
 # Minecraft server data (managed by R2)
-data/
+# Use /data/ (leading slash) to only match root directory, not datapack/data/
+/data/
 
 # Logs
 *.log
