コンポーズ通知とRcon経由の通知

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ HOST_DISPLAY_NAME=YourName
 
 # RCON パスワード (Minecraftサーバーへのリモートコマンド実行用)
 RCON_PASSWORD=minecraft
+
+# Discord Webhook URL (サーバ通知用、Discord チャンネル設定 > 連携サービス > ウェブフック で作成)
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/your_webhook_id/your_webhook_token
