--- a/compose.yml
+++ b/compose.yml
@@ -114,6 +114,7 @@ services:
     working_dir: /app
     volumes:
       - ./scripts/bossbar.rb:/app/bossbar.rb:ro
+      - ./scripts/lib:/app/lib:ro
     environment:
       - RCON_HOST=server
       - RCON_PORT=25575
@@ -122,6 +123,31 @@ services:
       - MAX_RETRIES=30
       - RETRY_INTERVAL=5
     command: ruby bossbar.rb
+    depends_on:
+      server:
+        condition: service_started
+    restart: "no"
+
+  # Discord通知サービス - サーバ起動/停止・プレイヤー参加/退出をDiscordに通知
+  discord-notify:
+    container_name: mc_discord_notify
+    build:
+      context: ./docker/ruby
+      dockerfile: Dockerfile
+    working_dir: /app
+    volumes:
+      - ./scripts/discord_notify.rb:/app/discord_notify.rb:ro
+      - ./scripts/lib:/app/lib:ro
+      - ./data/logs:/app/logs:ro
+    environment:
+      - RCON_HOST=server
+      - RCON_PORT=25575
+      - RCON_PASSWORD=${RCON_PASSWORD:-minecraft}
+      - HOST_DISPLAY_NAME=${HOST_DISPLAY_NAME:-Unknown}
+      - DISCORD_WEBHOOK_URL=${DISCORD_WEBHOOK_URL:-}
+      - MAX_RETRIES=30
+      - RETRY_INTERVAL=5
+    command: ruby discord_notify.rb
     depends_on:
       server:
         condition: service_started
