--- a/compose.yml
+++ b/compose.yml
@@ -47,7 +47,7 @@ services:
       MEMORY: "4G"
       # ゲーム設定
       SEED: ""
-      ALLOW_FLIGHT: "false"
+      ALLOW_FLIGHT: "true"
       ALLOW_NETHER: "true"
       ANNOUNCE_PLAYER_ACHIEVEMENTS: "true"
       DEBUG: "false"
@@ -67,7 +67,7 @@ services:
       ONLINE_MODE: "true"
       OP_PERMISSION_LEVEL: 4
       PREVIEWS_CHAT: "true"
-      PVP: "false"
+      PVP: "true"
       SIMULATION_DISTANCE: 10
       VIEW_DISTANCE: 12
       SNOOPER_ENABLED: "false"
